--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <script type="module" src="/src/main2.js"></script>
   </head>
   <body>
     <div id="app"></div>
     <div id="formContainer"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module">
+      const formContainer = document.getElementById("formContainer");
+      const tree = new FormTree(formContainer);
+      tree.printTree("Tree => ");
+    </script>
   </body>
 </html>
